# SHENJIME

./: .gitignore  AI候选词优化.md  AI功能测试指南.md  ANTI_FLICKER_OPTIMIZATION.md  AppTriePrecompiler.java  CACHE_OPTIMIZATION_GUIDE.md  CANDIDATE_DISPLAY_FIX.md  CANDIDATE_FLICKER_FIX.md  CANDIDATE_HEIGHT_FIX.md  CANDIDATE_STYLE_FIX.md  CURSOR_CYGWIN_SETUP.md  EXPORT_FEATURE_README.md  INTELLIGENT_QUERY_SYSTEM.md  MODERN_INPUT_ENGINE_SUMMARY.md  NO_RESULTS_HINT_FEATURE.md  OPTIMIZATION_SUMMARY.md  OVERLAY_INSTALL_FLOW_FIX.md  OVERLAY_INSTALL_SOLUTION.md  PROJECT_SUMMARY.md  PrecompilerHelper.java  Projet.md  README.md  README_CANDIDATE_QUERY.md  SEGMENTED_MATCHING_TEST.md  SMART_TRIE_OPTIMIZATION.md  TriePrecompiler.java  V_U_CONVERSION_SUMMARY.md  analyze_pinyin.py  bash_config.sh  build.gradle.kts  build_base_trie.py  build_java_compatible_trie.py  build_output.txt  build_small_chars_trie.py  build_universal_trie.py  build_unlimited_chars_trie.py  check_database.py  check_format.py  check_weixin.py  create_mcp_config.py  (+37 more)
.cursor/rules/: reviewgate.mdc
@icon/: README.md  main.js  package-lock.json  package.json
Review-Gate-2.1.2/V2/: INSTALLATION.md  install.bat  (+3 more)
Review-Gate-main/: .gitignore
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  crash_util.cpp  diffusion_jni.cpp  llm_mnn_jni.cpp  llm_session.cpp
app/src/main/cpp/mnn/: llm_session.cpp  llm_session.h  shenji_llm_jni.cpp
assists-framework/: build.gradle
cn_dicts/: people.dict.yaml
icon/: README.md  index.html  test.html
~/: .bash_profile  .bashrc  set_bash_default.sh
(+551 files in other folders)
